--- a/Pixels-21/resources/js/App/index.css
+++ b/Pixels-21/resources/js/App/index.css
@@ -1,1 +1,88 @@
+/**********************************************************************************************************************/
+/*Common Styles*/
+.section-title1 {
+  font-size: calc(8px + 2.2vw);
+}
+.line {
+  border: 3px solid #4e93fa;
+  width: 20%;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.overlayer {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.274);
+}
+.py {
+  padding:  120px;
+}
+.wave {
+  bottom: calc(-10px - 5vw);
+}
+.page-header {
+  min-height: 100vh;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+.page-header:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: .6;
+}
+.list li a {
+  color: #ffffff;
+  border: solid 1px #ffffff;
+  border-radius: 50%;
+  padding: 3px;
+  border-radius:10%;
+}
+.list li a:hover {
+  color: #4e93fa;
+}
 
+.text-color {
+  color: #5299E1;
+}
+
+
+/**********************************************************************************************************************/
+/*Media Queries*/
+
+
+/* Large devices (desktops, 992px and up) */
+@media screen and (max-width: 992px) {
+  .section-title1 {
+    text-align: center;
+  }
+  
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media screen and (max-width: 576px) {
+  .social-media .list li {
+    margin: 10px 0 !important;
+  }
+  .social-media img {
+    width: 20px;
+    height: 20px;
+  }
+  .uniqe-image {
+    top: 450px;
+    
+  }
+  .wave {
+    bottom: -25px;
+  }
+  
+}
