--- a/Pixels-21/resources/js/App/pages/Courses/CoursesStyles.css
+++ b/Pixels-21/resources/js/App/pages/Courses/CoursesStyles.css
@@ -43,13 +43,9 @@
   color: #fff;
   border-color: #fff;
 }
-.card-body {
-  border: solid 2px #1E1A33;
-  border-top: none;
-}
 .card-title, .courses-title, .instructors-title {
   color: #1E1A33;
-  font-weight: 600;
+  font-weight: 900;
 }
 .courses-title, .instructors-title {
   font-size: calc(10px + 1.7vw);
@@ -59,5 +55,6 @@
 }
 
 .instructors {
-  background-color: #EEEBFF;
+  background-color: #F5F7FB;
 }
+
