--- a/Pixels-21/resources/js/App/index.css
+++ b/Pixels-21/resources/js/App/index.css
@@ -61,15 +61,22 @@
   border: solid 5px #1E1A33;
   border-top: none;
 }
-.card-img-top:hover .card-img-top::after {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background-color: #0C003D;
-  opacity: 0.5;
-  z-index: 1;
+.card-img {
+  overflow: hidden;
+}
+.card-img img {
+  transition: transform 0.5s;
+  -webkit-transition: transform 0.5s;
+  -moz-transition: transform 0.5s;
+  -ms-transition: transform 0.5s;
+  -o-transition: transform 0.5s;
+}
+.card-img:hover img {
+  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  -o-transform: scale(1.3);
 }
 .rate-icon {
   color: #5299E1;
