--- a/Pixels-21/resources/js/App/index.css
+++ b/Pixels-21/resources/js/App/index.css
@@ -56,22 +56,22 @@
 }
 .text-color2 {
   color: #d3daeb;
-}
-.card-body {
+} 
+.other-courses .card-body, .courses .card-body {
   border: solid 5px #1E1A33;
   border-top: none;
 }
-.card-img {
+.other-courses .card-img, .courses .card-img {
   overflow: hidden;
 }
-.card-img img {
+.other-courses .card-img img , .courses .card-img img {
   transition: transform 0.5s;
   -webkit-transition: transform 0.5s;
   -moz-transition: transform 0.5s;
   -ms-transition: transform 0.5s;
   -o-transition: transform 0.5s;
 }
-.card-img:hover img {
+.other-courses .card-img:hover img , .courses .card-img:hover img {
   transform: scale(1.3);
   -webkit-transform: scale(1.3);
   -moz-transform: scale(1.3);
