--- a/Pixels-21/resources/js/App/index.css
+++ b/Pixels-21/resources/js/App/index.css
@@ -43,13 +43,17 @@
 .list li a {
   color: #ffffff;
   border: solid 1px #ffffff;
-  border-radius: 50%;
-  padding: 3px;
-  border-radius:10%;
+  padding: 10px 3px;
+  border-radius:30%;
+  -webkit-border-radius:30%;
+  -moz-border-radius:30%;
+  -ms-border-radius:30%;
+  -o-border-radius:30%;
 }
-.list li a:hover {
+/* .list li a:hover {
   color: #4e93fa;
-}
+  border: none; 
+} */
 
 .text-color {
   color: #5299E1;
