--- a/Pixels-21/resources/js/App/index.css
+++ b/Pixels-21/resources/js/App/index.css
@@ -1,5 +1,3 @@
-<<<<<<< Updated upstream
-=======
 /**********************************************************************************************************************/
 /*Common Styles*/
 .section-title1 {
@@ -45,13 +43,17 @@
 .list li a {
   color: #ffffff;
   border: solid 1px #ffffff;
-  border-radius: 50%;
-  padding: 3px;
-  border-radius:10%;
+  padding: 10px 3px;
+  border-radius:30%;
+  -webkit-border-radius:30%;
+  -moz-border-radius:30%;
+  -ms-border-radius:30%;
+  -o-border-radius:30%;
 }
-.list li a:hover {
+/* .list li a:hover {
   color: #4e93fa;
-}
+  border: none; 
+} */
 
 .text-color {
   color: #5299E1;
@@ -59,12 +61,11 @@
 .text-color2 {
   color: #d3daeb;
 } 
-instructors
 .other-courses .card-body, .courses .card-body, .instructors .card-body {
   border: solid 5px #1E1A33;
   border-top: none;
 }
-.other-courses .card-img, .courses .card-img, .instructors .card-img {
+.other-courses .card-img, .courses .card-img {
   overflow: hidden;
 }
 .other-courses .card-img img , .courses .card-img img {
@@ -95,7 +96,6 @@ instructors
   }
   
 }
->>>>>>> Stashed changes
 
 /* Small devices (landscape phones, 576px and up) */
 @media screen and (max-width: 576px) {
