--- a/Pixels-21/resources/js/App/pages/About/AboutStyles.css
+++ b/Pixels-21/resources/js/App/pages/About/AboutStyles.css
@@ -52,6 +52,15 @@ ul {
   font-size: calc(8px + 1.4vw);
 }
 
+
+.work-flow-items {
+  border: 1px solid #7070704D;
+}
+.work-flow-item-text {
+  font-size: calc(10px + 0.5vw);
+  color: #777c80;
+}
+
 /*****************************************************/
 /*F&Q*/
 .F_Q-titles .section-title1, .work-flow-titles .section-title1{
@@ -77,6 +86,10 @@ ul {
   color: #585858;
   font-size: calc(8px + 0.5vw);
   transition: display 2s !important;
+  -webkit-transition: display 2s !important;
+  -moz-transition: display 2s !important;
+  -ms-transition: display 2s !important;
+  -o-transition: display 2s !important;
 }
 .question-icon {
   transition: transform .5s;
